--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="cc.dewdrop.ffplayer.MainActivity">
+
     <LinearLayout
         android:id="@+id/linear_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <Button
             android:id="@+id/button_protocol"
             android:layout_width="0dp"
@@ -18,7 +19,8 @@
             android:layout_weight="1"
             android:onClick="onButtonClick"
             android:text="@string/button_protocol"
-            android:textSize="12sp"/>
+            android:textSize="10sp" />
+
         <Button
             android:id="@+id/button_codec"
             android:layout_width="0dp"
@@ -26,7 +28,8 @@
             android:layout_weight="1"
             android:onClick="onButtonClick"
             android:text="@string/button_codec"
-            android:textSize="12sp"/>
+            android:textSize="12sp" />
+
         <Button
             android:id="@+id/button_filter"
             android:layout_width="0dp"
@@ -34,7 +37,8 @@
             android:layout_weight="1"
             android:onClick="onButtonClick"
             android:text="@string/button_filter"
-            android:textSize="12sp"/>
+            android:textSize="12sp" />
+
         <Button
             android:id="@+id/button_format"
             android:layout_width="0dp"
@@ -42,19 +46,34 @@
             android:layout_weight="1"
             android:onClick="onButtonClick"
             android:text="@string/button_format"
-            android:textSize="12sp"/>
+            android:textSize="12sp" />
+
+        <Button
+            android:id="@+id/button_play"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="onButtonClick"
+            android:text="@string/button_play"
+            android:textSize="12sp" />
     </LinearLayout>
+
+    <cc.dewdrop.ffplayer.widget.FFVideoView
+        android:id="@+id/videoView"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_below="@+id/linear_layout" />
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/linear_layout"
+        android:layout_below="@+id/videoView"
         android:padding="16dp">
 
         <TextView
             android:id="@+id/sample_text"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content" />
     </ScrollView>
 
 
